[metadata]
name = sbank
version = attr: sbank.__version__
author = Ana Lorenzo and Ian Harry
maintainer = Ian Harry
maintainer_email = ian.harry@ligo.org
description = Using Cython to allow faster PN computations in parallel
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-2.0-or-later
url = https://github.com/spxiwh/pn_lal_threaded
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: POSIX
	Operating System :: Unix
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Scientific/Engineering :: Physics
project_urls =
	Bug Tracker = https://github.com/spxiwh/pn_lal_threaded/issues/
	Source Code = https://github.com/spxiwh/pn_lal_threaded

[options]
setup_requires =
	Cython
	numpy
	setuptools >= 30.3.0
install_requires =
	lalsuite
packages = find:
python_version = >=3.9

[coverage:run]
plugins = Cython.Coverage

[tool:pytest]
addopts = -r a

[pep8]
; this sets the line-length for codeclimate
max-line-length = 100

[flake8]
max-line-length = 100
select =
	E,
	EXE,
	F,
	W,
ignore =
	E226,
	W503,
per-file-ignores =
	__init__.py:F401
